# mailc

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  socket1.h
docs/: Doxyfile
docs/html/: annotated.html  classIMAPConnection-members.html  classIMAPConnection.html  classSMTPConnection-members.html  classSMTPConnection.html  classSocket-members.html  classSocket.html  classes.html  cliutils_8cpp.html  cliutils_8cpp__incl.map  cliutils_8cpp__incl.md5  cliutils_8h.html  cliutils_8h__dep__incl.map  cliutils_8h__dep__incl.md5  cliutils_8h__incl.map  cliutils_8h__incl.md5  cliutils_8h_source.html  dir_000006_000005.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5280bb524ed5294135fd93e0b12dbd44.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_7f7e439ba0927089503219129b4cf038.html  dir_cf779efadf30e9c7d82da7dbe2eb33f7.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  imap_8cpp.html  imap_8cpp__incl.map  imap_8cpp__incl.md5  imap_8h.html  imap_8h__dep__incl.map  (+36 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_4.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js
docs/latex/: annotated.tex  classIMAPConnection.tex  classSMTPConnection.tex  classSocket.tex  cliutils_8cpp.tex  cliutils_8cpp__incl.md5  cliutils_8h.tex  cliutils_8h__dep__incl.md5  cliutils_8h__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  imap_8cpp.tex  imap_8cpp__incl.md5  imap_8h.tex  imap_8h__dep__incl.md5  imap_8h__incl.md5  index.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  smtp_8cpp.tex  smtp_8cpp__incl.md5  smtp_8h.tex  smtp_8h__dep__incl.md5  smtp_8h__incl.md5  socket_8cpp.tex  socket_8cpp__incl.md5  socket_8h.tex  socket_8h__dep__incl.md5  socket_8h__incl.md5  structMail.tex  structconfig.tex  utils_8h.tex  utils_8h__dep__incl.md5  utils_8h__incl.md5
include/: cliutils.h  imap.h  smtp.h  socket.h  utils.h
src/: cliutils.cpp  error.cpp  imap.cpp  main.cpp  smtp.cpp  socket.cpp  socket.h  socket1.cpp
